/*
 * $Id: ChangeLog,v 1.6175 2008/07/14 19:05:09 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-07-14 17:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * include\hbsetup.ch
    * returned:
      #ifdef HB_EXTENSION
         #define HB_EXT_INKEY
      #endif
  * include\hbstdgen.ch
    * added #undef HB_EXT_INKEY to avoid double #define generated by PP.

  * source\rtl\tbrowse.prg
    ! fix on colorrect behaviour.

2008-07-14 14:30 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source\vm\hvm.c
    ! GPF trap if hb_rddShutDown() calls PRG code when no symbol at base of stack.

2008-07-14 12:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * mdir.bat
    * changed to remove pptable.c and pptable.obj files when "clean" is used.

  * contrib/hbhpdf/hpdf_conf.h
    * uncommented hb_xgrab/hb_xfree declarations under Pelles C.

  * include\hbsetup.ch
    ! fixed to avoid compiler warnings:
      changed:
      #ifdef HB_EXTENSION
         #define HB_EXT_INKEY
      #endif
      to:
      #ifdef HB_EXTENSION
      #ifndef HB_EXT_INKEY
         #define HB_EXT_INKEY
      #endif
      #endif

  * source\rtl\dbedit.prg
    ! fixed to call UFD with DE_IDLE or DE_EXCEPT mode after DE_INIT call.

2008-07-13 19:46 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * mdir.bat
  * make_b32.bat
  * make_dc.bat
  * make_gc.bat
  * make_pc.bat
  * make_vc.bat
  * make_w32.bat
    ! CLEAN param now only cleans like original make system. If you want
      to build after cleanup pass BUILD as the 2nd param.  Only tested
      with Borland.  Please test with other compilers.

      make_???.bat clean
      make_???.bat clean build

2008-07-12 21:10 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * compile.mak
    * Hack to force recompile of hbslex.c if harbour.slx is newer