@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6175 2008/07/14 19:05:09 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.6176 2008/07/14 20:17:08 modalsist Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-07-17 17:10 UTC-0300 Luiz Rafael Culik( luiz at xharbour.com.br)
+  * source/rtl/copyfile.c
+    ! fixed declaration of blockeval function under linux
 
 2008-07-14 17:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * include\hbsetup.ch
